# tests/resources/openapi.json
@@ -119,9 +119,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "blob"
-        ],
+        "required": ["blob"],
         "title": "Body_put_blob",
         "type": "object"
       },
@@ -137,10 +135,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "old",
-          "new1"
-        ],
+        "required": ["old", "new1"],
         "title": "ChangePasswordRequest",
         "type": "object"
       },
@@ -188,13 +183,7 @@
             "type": "boolean"
           }
         },
-        "required": [
-          "dn",
-          "attrs",
-          "binary",
-          "autoFilled",
-          "changed"
-        ],
+        "required": ["dn", "attrs", "binary", "autoFilled", "changed"],
         "title": "Entry",
         "type": "object"
       },
@@ -300,11 +289,7 @@
             "type": "integer"
           }
         },
-        "required": [
-          "min",
-          "max",
-          "next"
-        ],
+        "required": ["min", "max", "next"],
         "title": "Range",
         "type": "object"
       },
@@ -332,11 +317,7 @@
             "type": "object"
           }
         },
-        "required": [
-          "attributes",
-          "objectClasses",
-          "syntaxes"
-        ],
+        "required": ["attributes", "objectClasses", "syntaxes"],
         "title": "Schema",
         "type": "object"
       },
@@ -352,10 +333,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "dn",
-          "name"
-        ],
+        "required": ["dn", "name"],
         "title": "SearchResult",
         "type": "object"
       },
@@ -375,11 +353,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "oid",
-          "desc",
-          "not_human_readable"
-        ],
+        "required": ["oid", "desc", "not_human_readable"],
         "title": "Syntax",
         "type": "object"
       },
@@ -399,11 +373,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "dn",
-          "structuralObjectClass",
-          "hasSubordinates"
-        ],
+        "required": ["dn", "structuralObjectClass", "hasSubordinates"],
         "title": "TreeItem",
         "type": "object"
       },
@@ -449,11 +419,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "loc",
-          "msg",
-          "type"
-        ],
+        "required": ["loc", "msg", "type"],
         "title": "ValidationError",
         "type": "object"
       }
@@ -461,7 +427,7 @@
   },
   "info": {
     "title": "LDAP UI",
-    "version": "0.13.6"
+    "version": "0.13.8"
   },
   "openapi": "3.1.0",
   "paths": {
@@ -530,9 +496,7 @@
           }
         },
         "summary": "Delete Blob",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       },
       "put": {
         "description": "Upload a binary attribute",
@@ -608,9 +572,7 @@
           }
         },
         "summary": "Put Blob",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       }
     },
     "/api/change-password/{dn}": {
@@ -670,9 +632,7 @@
           }
         },
         "summary": "Change Password",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       }
     },
     "/api/check-password/{dn}": {
@@ -741,9 +701,7 @@
           }
         },
         "summary": "Check Password",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       }
     },
     "/api/entry/{dn}": {
@@ -792,9 +750,7 @@
           }
         },
         "summary": "Delete Entry",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       },
       "get": {
         "description": "Retrieve a directory entry by DN",
@@ -849,9 +805,7 @@
           }
         },
         "summary": "Get Entry",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       },
       "post": {
         "operationId": "post_entry",
@@ -926,9 +880,7 @@
           }
         },
         "summary": "Post Entry",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       },
       "put": {
         "operationId": "put_entry",
@@ -1003,9 +955,7 @@
           }
         },
         "summary": "Put Entry",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       }
     },
     "/api/ldif": {
@@ -1057,9 +1007,7 @@
           }
         },
         "summary": "Upload Ldif",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       }
     },
     "/api/range/{attribute}": {
@@ -1116,9 +1064,7 @@
           }
         },
         "summary": "Attribute Range",
-        "tags": [
-          "Misc"
-        ]
+        "tags": ["Misc"]
       }
     },
     "/api/rename/{dn}": {
@@ -1179,9 +1125,7 @@
           }
         },
         "summary": "Rename Entry",
-        "tags": [
-          "Editing"
-        ]
+        "tags": ["Editing"]
       }
     },
     "/api/schema": {
@@ -1229,9 +1173,7 @@
           }
         },
         "summary": "Ldap Schema",
-        "tags": [
-          "Misc"
-        ]
+        "tags": ["Misc"]
       }
     },
     "/api/search/{query}": {
@@ -1292,9 +1234,7 @@
           }
         },
         "summary": "Search",
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/api/subtree/{root_dn}": {
@@ -1355,9 +1295,7 @@
           }
         },
         "summary": "List Subtree",
-        "tags": [
-          "Misc"
-        ]
+        "tags": ["Misc"]
       }
     },
     "/api/tree/{basedn}": {
@@ -1418,9 +1356,7 @@
           }
         },
         "summary": "Get Tree",
-        "tags": [
-          "Navigation"
-        ]
+        "tags": ["Navigation"]
       }
     },
     "/api/whoami": {
@@ -1469,9 +1405,7 @@
           }
         },
         "summary": "Whoami",
-        "tags": [
-          "Misc"
-        ]
+        "tags": ["Misc"]
       }
     }
   }
